# protoc-docs-plugin

./: .coveragerc  .gitignore  BUILD.bazel  CONTRIBUTING.rst  README.md  WORKSPACE  docs_plugin.bzl  nox.py  noxfile-2.7.py  noxfile.py  repositories.bzl  setup.py
.circleci/: config.yml
.github/: sync-repo-settings.yaml
data/: out
protoc_docs/: code.py  parser.py
protoc_docs/models/: __init__.py  descriptor_pb2.py  plugin_pb2.py
protos/: README.md  plugin.proto
testing/: constraints-3.6.txt
tests/: test_code.py  test_parser.py  test_py_desc_converter.py  test_py_docstring.py
tests/data/: descriptor_set_updated_py_docs  input_buffer  message_option.proto
